--- a/flaskblog/templates/post.html
+++ b/flaskblog/templates/post.html
@@ -9,7 +9,7 @@
                 <a class="mr-2" href="#">{{ post.author.username }}</a>
                 <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 {% if post.author == current_user %}
-                <div><a href="{{url_for('update_post', post_id=post.id)}}" class="btn btn-secondary btn-sm mt-1 mb-1">Update</a></div>
+                <div><a href="{{url_for('posts.update_post', post_id=post.id)}}" class="btn btn-secondary btn-sm mt-1 mb-1">Update</a></div>
                 <button class="btn btn-danger btn-sm m-1" type="button" data-toggle="modal" data-target="#deleteModal">Delete</button>
                 {% endif %}
             </div>
@@ -30,7 +30,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="{{url_for('delete_post', post_id=post.id)}}" method="post">
+          <form action="{{url_for('posts.delete_post', post_id=post.id)}}" method="post">
               <input type="submit" class="btn btn-danger" value="Delete">
           </form>
       </div>
